@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -26,7 +26,7 @@ package jdk.graal.compiler.core.test;
 
 import org.junit.Test;
 
-import sun.misc.Unsafe;
+import jdk.internal.misc.Unsafe;
 
 public class UnsafeCopyMemoryTest extends GraalCompilerTest {
 
