@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2011, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2011, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,7 +25,6 @@
 package jdk.graal.compiler.graph;
 
 import static jdk.graal.compiler.graph.Graph.isNodeModificationCountsEnabled;
-import static jdk.graal.compiler.serviceprovider.GraalUnsafeAccess.getUnsafe;
 
 import java.lang.annotation.ElementType;
 import java.lang.annotation.RetentionPolicy;
@@ -40,6 +39,9 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
+
+import jdk.graal.compiler.serviceprovider.GraalServices;
+import org.graalvm.collections.EconomicSet;
 
 import jdk.graal.compiler.core.common.Fields;
 import jdk.graal.compiler.core.common.type.AbstractPointerStamp;
@@ -58,9 +60,9 @@ import jdk.graal.compiler.nodeinfo.NodeCycles;
 import jdk.graal.compiler.nodeinfo.NodeInfo;
 import jdk.graal.compiler.nodeinfo.NodeSize;
 import jdk.graal.compiler.nodeinfo.Verbosity;
+import jdk.graal.compiler.nodes.spi.Simplifiable;
 import jdk.graal.compiler.options.OptionValues;
-import jdk.vm.ci.services.Services;
-import sun.misc.Unsafe;
+import jdk.internal.misc.Unsafe;
 
 /**
  * This class is the base class for all nodes. It represents a node that can be inserted in a
@@ -91,11 +93,11 @@ import sun.misc.Unsafe;
 @NodeInfo
 public abstract class Node implements Cloneable, Formattable {
 
-    private static final Unsafe UNSAFE = getUnsafe();
+    private static final Unsafe UNSAFE = Unsafe.getUnsafe();
 
     public static final NodeClass<?> TYPE = null;
 
-    public static final boolean TRACK_CREATION_POSITION = Boolean.parseBoolean(Services.getSavedProperty("debug.graal.TrackNodeCreationPosition"));
+    public static final boolean TRACK_CREATION_POSITION = Boolean.parseBoolean(GraalServices.getSavedProperty("debug.graal.TrackNodeCreationPosition"));
 
     static final int DELETED_ID_START = -1000000000;
     static final int INITIAL_ID = -1;
@@ -236,8 +238,75 @@ public abstract class Node implements Cloneable, Formattable {
     /**
      * Marker interface for nodes that contain other nodes. When the inputs to {@code this} change,
      * users of {@code this} should also be placed on the work list for canonicalization.
+     *
+     * To illustrate this consider the following IR shape:
+     *
+     * <pre>
+     *                       Node n1
+     *                          |
+     *          IndirectInputCanonicalization
+     *          /               |            \
+     *       usage1          usage2          usage3
+     * </pre>
+     *
+     * Now consider the following situation: this pattern is fully optimized, nothing can change.
+     * However, when the input node {@code n1} of {@code IndirectInputCanonicalization} changes to a
+     * new node {@code n2} suddenly the usage of {@code IndirectInputCanonicalization} can optimize
+     * itself: for example it can drop an input edge (any optimization is possible). Normally these
+     * patterns would be found by a full canonicalizer run, by implementing this interface
+     * incremental canonicalization will also consider the usages.
+     *
+     * <pre>
+     *                       NewNode n2
+     *                          |
+     *          IndirectInputCanonicalization
+     *          /               |            \
+     *       usage1          usage2          usage3
+     * </pre>
+     *
+     * The pattern could optimize for example to
+     *
+     * <pre>
+     *                       NewNode n2---------------
+     *                          |                     |
+     *          IndirectInputCanonicalization         |
+     *          /               |                     |
+     *       usage1          usage2          usage3----
+     * </pre>
+     *
+     * where {@code usage3} completely skips {@code IndirectInputCanonicalization} now.
+     *
+     * Note that this is called {@code IndirectInputChangedCanonicalization} because {@code n1} is
+     * considered an indirect (transitive) input of {@code usage3}.
      */
-    public interface IndirectCanonicalization {
+    public interface IndirectInputChangedCanonicalization {
+    }
+
+    /**
+     * Marker interface for nodes where one input change can cause another input to optimize.
+     *
+     * Consider the following IR shape:
+     *
+     * <pre>
+     *            Node n1         Node n2
+     *               |               |
+     *          IndirectInputCanonicalization
+     * </pre>
+     *
+     * If now input {@code n1} is replaced by another node
+     *
+     * <pre>
+     *            NewNode n3      Node n2
+     *               |               |
+     *          IndirectInputCanonicalization
+     * </pre>
+     *
+     * this can cause n2 to optimize. This is especially relevant for local {@link Simplifiable}
+     * simplifications based on single input/usage patterns. Thus, in order to incrementally trigger
+     * the canonicalization of {@code n2} it is explicitly added to the worklist of the usage
+     * implements {@code InputsChangedCanonicalization}.
+     */
+    public interface InputsChangedCanonicalization {
     }
 
     /**
@@ -418,7 +487,7 @@ public abstract class Node implements Cloneable, Formattable {
     }
 
     /**
-     * Gets the maximum number of usages {@code this} has had at any point in time.
+     * Gets the current number of usages {@code this} node has.
      */
     public int getUsageCount() {
         if (usage0 == null) {
@@ -558,29 +627,81 @@ public abstract class Node implements Cloneable, Formattable {
      * Removes one occurrence of a given node from this node's {@linkplain #usages() usages}.
      *
      * @param node the node to remove
-     * @return whether or not {@code usage} was in the usage list
      */
     public boolean removeUsage(Node node) {
         assert node != null;
         // For large graphs, usage removal is performance critical.
         // Furthermore, it is critical that this method maintains the invariant that the usage list
         // has no null element preceding a non-null element.
-        incUsageModCount();
         if (usage0 == node) {
             movUsageFromEndToIndexZero();
+            incUsageModCount();
             return true;
         }
         if (usage1 == node) {
             movUsageFromEndToIndexOne();
+            incUsageModCount();
             return true;
         }
         for (int i = this.extraUsagesCount - 1; i >= 0; i--) {
             if (extraUsages[i] == node) {
                 movUsageFromEndToExtraUsages(i);
+                incUsageModCount();
                 return true;
             }
         }
         return false;
+    }
+
+    /**
+     * Removes all nodes in the provided set from {@code this} node's usages. This is significantly
+     * faster than repeated execution of {@link Node#removeUsage}.
+     */
+    public void removeUsages(EconomicSet<Node> toDelete) {
+        if (toDelete.size() == 0) {
+            return;
+        } else if (toDelete.size() == 1) {
+            removeUsage(toDelete.iterator().next());
+            return;
+        }
+
+        // requires iteration from back to front to check nodes prior to being moved to the front
+        for (int i = extraUsagesCount - 1; i >= 0; i--) {
+            if (toDelete.contains(extraUsages[i])) {
+                movUsageFromEndToExtraUsages(i);
+                incUsageModCount();
+            }
+        }
+        if (usage1 != null && toDelete.contains(usage1)) {
+            movUsageFromEndToIndexOne();
+            incUsageModCount();
+        }
+        if (usage0 != null && toDelete.contains(usage0)) {
+            movUsageFromEndToIndexZero();
+            incUsageModCount();
+        }
+    }
+
+    /**
+     * Removes all dead nodes from {@code this} node's usages. This is significantly faster than
+     * repeated execution of {@link Node#removeUsage}.
+     */
+    public void removeDeadUsages() {
+        // requires iteration from back to front to check nodes prior to being moved to the front
+        for (int i = extraUsagesCount - 1; i >= 0; i--) {
+            if (!extraUsages[i].isAlive()) {
+                movUsageFromEndToExtraUsages(i);
+                incUsageModCount();
+            }
+        }
+        if (usage1 != null && !usage1.isAlive()) {
+            movUsageFromEndToIndexOne();
+            incUsageModCount();
+        }
+        if (usage0 != null && !usage0.isAlive()) {
+            movUsageFromEndToIndexZero();
+            incUsageModCount();
+        }
     }
 
     public final Node predecessor() {
@@ -1075,10 +1196,7 @@ public abstract class Node implements Cloneable, Formattable {
     private void maybeNotifyInputChanged(Node node) {
         if (graph != null) {
             assert !graph.isFrozen();
-            NodeEventListener listener = graph.nodeEventListener;
-            if (listener != null) {
-                listener.event(Graph.NodeEvent.INPUT_CHANGED, node);
-            }
+            graph.fireNodeEvent(Graph.NodeEvent.INPUT_CHANGED, node);
             graph.edgeModificationCount++;
         }
     }
@@ -1091,10 +1209,7 @@ public abstract class Node implements Cloneable, Formattable {
     public void maybeNotifyZeroUsages(Node node) {
         if (graph != null && node.isAlive()) {
             assert !graph.isFrozen();
-            NodeEventListener listener = graph.nodeEventListener;
-            if (listener != null) {
-                listener.event(Graph.NodeEvent.ZERO_USAGES, node);
-            }
+            graph.fireNodeEvent(Graph.NodeEvent.ZERO_USAGES, node);
         }
     }
 
@@ -1290,10 +1405,15 @@ public abstract class Node implements Cloneable, Formattable {
      *            list for an edge list)
      * @return the copy of {@code this}
      */
+
     final Node clone(Graph into, EnumSet<Edges.Type> edgesToCopy) {
+        return clone(into, edgesToCopy, true);
+    }
+
+    final Node clone(Graph into, EnumSet<Edges.Type> edgesToCopy, boolean gvn) {
         final NodeClass<? extends Node> nodeClassTmp = getNodeClass();
         boolean useIntoLeafNodeCache = false;
-        if (into != null) {
+        if (into != null && gvn) {
             if (nodeClassTmp.valueNumberable() && nodeClassTmp.isLeafNode()) {
                 useIntoLeafNodeCache = true;
                 Node otherNode = into.findNodeInCache(this);
@@ -1336,42 +1456,71 @@ public abstract class Node implements Cloneable, Formattable {
     protected void afterClone(@SuppressWarnings("unused") Node other) {
     }
 
+    @SuppressWarnings("unchecked")
     protected boolean verifyInputs() {
-        for (Position pos : inputPositions()) {
-            Node input = pos.get(this);
-            if (input == null) {
-                assertTrue(pos.isInputOptional(), "non-optional input %s cannot be null in %s (fix nullness or use @OptionalInput)", pos, this);
-            } else {
-                assertFalse(input.isDeleted(), "input was deleted %s", input);
-                assertTrue(input.isAlive(), "input is not alive yet, i.e., it was not yet added to the graph");
-                assertTrue(pos.getInputType() == InputType.Unchecked || input.isAllowedUsageType(pos.getInputType()), "invalid usage type input:%s inputType:%s inputField:%s", input,
-                                pos.getInputType(), pos.getName());
-                Class<?> expectedType = pos.getType();
-                assertTrue(expectedType.isAssignableFrom(input.getClass()), "Invalid input type for %s: expected a %s but was a %s", pos, expectedType, input.getClass());
-            }
-        }
-        /*
-         * Verify properties of input list objects themselves, as opposed to their contents. The
-         * iteration over input positions above visits the contents of input lists but does not
-         * distinguish between null and empty lists.
-         */
         InputEdges inputEdges = nodeClass.getInputEdges();
+
+        // Verify properties of direct inputs
+        for (int i = 0; i < inputEdges.getDirectCount(); i++) {
+            Node input = (Node) inputEdges.get(this, i);
+            verifyInput(inputEdges, i, input);
+        }
+
+        // Verify properties of input list objects
         for (int i = inputEdges.getDirectCount(); i < inputEdges.getCount(); i++) {
             Object inputList = inputEdges.get(this, i);
             if (inputList == null) {
                 assertTrue(inputEdges.isOptional(i), "non-optional input list %s cannot be null in %s (fix nullness or use @OptionalInput)", inputEdges.getName(i), this);
+            } else {
+                NodeList<Node> nodeList = (NodeList<Node>) inputList;
+                for (Node input : nodeList) {
+                    verifyInput(inputEdges, i, input);
+                }
             }
         }
         return true;
     }
 
-    public boolean verify() {
+    private void verifyInput(InputEdges inputEdges, int i, Node input) {
+        if (input == null) {
+            assertTrue(inputEdges.isOptional(i), "non-optional input %s cannot be null in %s (fix nullness or use @OptionalInput)", inputEdges.getName(i), this);
+        } else {
+            assertFalse(input.isDeleted(), "input was deleted %s", input);
+            assertTrue(input.isAlive(), "input is not alive yet, i.e., it was not yet added to the graph");
+            InputType inputType = inputEdges.getInputType(i);
+            assertTrue(inputType == InputType.Unchecked || input.isAllowedUsageType(inputType), "invalid usage type input:%s inputType:%s inputField:%s", input,
+                            inputType, inputEdges.getName(i));
+            Class<?> expectedType = i < inputEdges.getDirectCount() ? inputEdges.getType(i) : Node.class;
+            assertTrue(expectedType.isAssignableFrom(input.getClass()), "Invalid input type for %s: expected a %s but was a %s", inputEdges.getName(i), expectedType, input.getClass());
+        }
+    }
+
+    public final boolean verify() {
+        return verify(true);
+    }
+
+    /**
+     * Basic verification of node properties. This method is final so that a node cannot
+     * accidentally skip calling super(). Node specific verification should be done in
+     * {@link #verifyNode()}.
+     */
+    public final boolean verify(boolean verifyInputs) {
         assertTrue(isAlive(), "cannot verify inactive node %s", this);
-        assertTrue(graph() != null, "null graph");
-        verifyInputs();
+        assertTrue(graph != null, "null graph");
+        if (verifyInputs) {
+            verifyInputs();
+        }
         if (graph.verifyGraphEdges) {
             verifyEdges();
         }
+        verifyNode();
+        return true;
+    }
+
+    /**
+     * Verify node properties which are not covered by {@link #verify()}.
+     */
+    protected boolean verifyNode() {
         return true;
     }
 
@@ -1387,7 +1536,7 @@ public abstract class Node implements Cloneable, Formattable {
 
         for (Node successor : successors()) {
             assertTrue(successor.predecessor() == this, "missing predecessor in %s (actual: %s)", successor, successor.predecessor());
-            assertTrue(successor.graph() == graph(), "mismatching graph in successor %s", successor);
+            assertTrue(successor.graph == graph, "mismatching graph in successor %s", successor);
         }
         for (Node usage : usages()) {
             assertFalse(usage.isDeleted(), "usage %s must never be deleted", usage);
@@ -1462,7 +1611,7 @@ public abstract class Node implements Cloneable, Formattable {
         return id;
     }
 
-    /**
+    /*
      * Do not overwrite the equality test of a node in subclasses. Equality tests must rely solely
      * on identity.
      */
@@ -1547,6 +1696,12 @@ public abstract class Node implements Cloneable, Formattable {
     @Deprecated
     public int getId() {
         return id;
+    }
+
+    @Deprecated
+    public int getIdBeforeDeletion() {
+        assert isDeleted();
+        return (id - DELETED_ID_START) * -1;
     }
 
     @Override
