@@ -1,7 +1,7 @@
 ---
 layout: docs
 toc_group: embedding
-link_title: Embedding Reference
+link_title: Embedding Languages
 permalink: /reference-manual/embed-languages/
 ---
 
@@ -25,55 +25,53 @@ permalink: /reference-manual/embed-languages/
 * [Setting the Heap Size](#setting-the-heap-size)
 * [Compatibility with JSR-223 ScriptEngine](#compatibility-with-jsr-223-scriptengine)
 
-The GraalVM Polyglot API lets you embed and run code from guest languages in JVM-based host applications.
+The [GraalVM Polyglot API](https://www.graalvm.org/sdk/javadoc/org/graalvm/polyglot/package-summary.html) lets you embed and run code from guest languages in Java host applications.
 
-Throughout this section, you will learn how to create a host application in Java that runs on GraalVM and directly calls a guest language.
+Throughout this section, you will learn how to create a host application in Java that runs on GraalVM and directly calls a guest language. 
 You can use the tabs beneath each code example to choose between JavaScript, R, Ruby, and Python.
 
-> Note: The usage description for polyglot embeddings was revised with the GraalVM for JDK 21 (23.1.0) release. If you are still using an older GraalVM version, ensure the correct version of the documentation is displayed. More information on the change can be found in the [release notes](https://www.graalvm.org/release-notes/JDK_21/).
-
+> Note: The usage description for polyglot embeddings was revised with GraalVM for JDK 21 and Polyglot API version 23.1.0. If you are still using Polyglot API version older than 23.1.0, ensure the correct version of the documentation is displayed. More information on the change can be found in the [release notes](https://www.graalvm.org/release-notes/JDK_21/#graalvm-for-jdk-21).
 
 ## Dependency Setup
 
-Since Polyglot version 23.1, all necessary artifacts can be downloaded directly from Maven Central.
-All artifacts relevant to embedders can be found in the Maven dependency group [`org.graalvm.polyglot`](https://central.sonatype.com/namespace/org.graalvm.polyglot).
+Since Polyglot API version 23.1.0, all necessary artifacts can be downloaded directly from Maven Central.
+Artifacts relevant to embedders can be found in the Maven dependency group [`org.graalvm.polyglot`](https://central.sonatype.com/namespace/org.graalvm.polyglot).
 See the [polyglot embedding demonstration](https://github.com/graalvm/polyglot-embedding-demo) on GitHub for a complete runnable example.
 
 Here is an example Maven dependency setup that you can put into your project:
-
 ```xml
 <dependency> 
 	<groupId>org.graalvm.polyglot</groupId> 
 	<artifactId>polyglot</artifactId> 
-	<version>23.1.0</version> 
+	<version>${graalvm.polyglot.version}</version>
 </dependency>
 <dependency> 
-	<groupId>org.graalvm.polyglot</groupId> 
-	<!-- Select language: js, ruby, python, java, llvm, wasm, languages-->
+	<groupId>org.graalvm.polyglot</groupId>
+	<!-- Select a language: js, ruby, python, java, llvm, wasm, languages-->
 	<artifactId>js</artifactId> 
-	<version>23.1.0</version> 
+	<version>${graalvm.polyglot.version}</version>
 	<type>pom</type>
 </dependency>
-<!-- add additional languages if needed -->
+<!-- Add additional languages if needed -->
 <dependency> 
 	<groupId>org.graalvm.polyglot</groupId> 
-	<!-- Select tools: profiler, inspect, coverage, dap, tools -->
-	<artifactId>tools</artifactId> 
-	<version>23.1.0</version> 
+    <!-- Select a tool: profiler, inspect, coverage, dap, tools -->
+	<artifactId>profiler</artifactId> 
+	<version>${graalvm.polyglot.version}</version>
 	<type>pom</type>
 </dependency>
-<!-- add additional tools if needed -->
 ```
 
-Language and tool dependencies use the [GraalVM Free Terms and Conditions (GFTC)](https://www.oracle.com/downloads/licenses/graal-free-license.html) license
-To use community-licensed versions instead, add the `-community` suffix to each artifact (e.g., `js-community`).
-To access [polyglot isolate](#polyglot-isolates) artifacts, use the `-isolate` suffix instead (e.g. `js-isolate`).
+> The `pom` type is a requirement for language or tool dependencies.
+
+Language and tool dependencies use the [GraalVM Free Terms and Conditions (GFTC)](https://www.oracle.com/downloads/licenses/graal-free-license.html) license.
+To use community-licensed versions instead, add the `-community` suffix to each artifact (for example, `js-community`).
+To access [polyglot isolate](#polyglot-isolates) artifacts, use the `-isolate` suffix instead (for example, `js-isolate`).
 
 The artifacts `languages` and `tools` include all available languages and tools as dependencies. 
-This artifact might grow or shrink between major releases. We recommend selecting only the needed languages for a production deployment.
+This artifact might grow or shrink between major releases. We recommend selecting only the needed language(s) for a production deployment.
 
-Additionally, your _module-info.java_ file should require `org.graalvm.polyglot` when using Java modules.
-
+Additionally, your _module-info.java_ file should require `org.graalvm.polyglot` when using Java modules:
 ```java
 module com.mycompany.app {
   requires org.graalvm.polyglot;
@@ -81,8 +79,21 @@ module com.mycompany.app {
 ```
 
 Whether your configuration can run with a Truffle runtime optimization depends on the GraalVM JDK you use.
-For further details, refer to the [Runtime Compilation section](#Runtime-Optimization-Support).
+For further details, refer to the [Runtime Compilation section](#runtime-optimization-support).
 
+We recommend configuring polyglot embeddings using modules and the module path whenever possible. 
+Be aware that using `org.graalvm.polyglot` from the class path instead will enable access to unsafe APIs for all libraries on the class path.
+If the application is not yet modularized, hybrid use of the class path and module path is possible.
+For example:
+```
+$java -classpath=lib --module-path=lib/polyglot --add-modules=org.graalvm.polyglot ...
+```
+In this example, `lib/polyglot` directory should contain all polyglot and language JAR files.
+To access polyglot classes from the class path, you must also specify the `--add-modules=org.graalvm.polyglot` JVM option.
+If you are using [GraalVM Native Image](#build-native-executables-from-polyglot-applications), polyglot modules on the class path will be automatically upgraded to the module path.
+
+While we do support creating single uber JAR files from polyglot libraries, for example, using the Maven Assembly plugin, but we do not recommend it.
+Also note that uber JAR files are not supported when creating native binaries with GraalVM Native Image.
 
 ## Compile and Run a Polyglot Application
 
@@ -102,13 +113,12 @@ Complete the steps in this section to create a sample polyglot application that 
 
 4. Update the Maven [pom.xml](https://github.com/graalvm/polyglot-embedding-demo/blob/main/pom.xml) dependency configuration to include the languages to run as described in the [previous section](#dependency-setup).
 
-5. [Download and setup GraalVM](../../getting-started/graalvm-community/get-started-graalvm-community.md) by setting the `JAVA_HOME` environment variable to point to a GraalVM JDK.
+5. [Download and install GraalVM](../../getting-started/get-started.md) by setting the value of the `JAVA_HOME` environment variable to the location of a GraalVM JDK.
 
 6. Run `mvn package exec:exec` to build and execute the sample code.
 
 You now have a polyglot application that consists of a Java host application and guest language code, running on GraalVM.
-You can use this application with other code examples to demonstrate more advanced capabilities of the Polyglot API.
-
+You can use this application with other code examples to demonstrate more advanced capabilities of the GraalVM Polyglot API.
 
 ## Define Guest Language Functions as Java Values
 
@@ -131,7 +141,6 @@ tab4type="java" tab4id="Function_Python" tab4name="Python" tab4path="embed/funct
 - The `execute` call executes the function with the argument `41`.
 - The `asInt` call converts the result to a Java `int`.
 - The second assertion verifies that the result was incremented by one as expected.
-
 
 ## Access Guest Languages Directly from Java
 
@@ -235,7 +244,7 @@ tab4type="java" tab4id="Lookup_Java_from_Python" tab4name="Python" tab4path="emb
 - The script looks up the Java type `java.math.BigDecimal` and stores it in a variable named `BigDecimal`.
 - The static method `BigDecimal.valueOf(long)` is invoked to create new
 `BigDecimal`s with value `10`. In addition to looking up static Java methods, it
-is also possible to directly instantiate the returned Java type., e.g., in
+is also possible to directly instantiate the returned Java type., for example, in
 JavaScript using the `new` keyword.
 - The new decimal is used to invoke the `pow` instance method with `20` which calculates  `10^20`.
 - The result of the script is converted to a host object by calling `asHostObject()`. The return value is automatically cast to the `BigDecimal` type.
@@ -259,7 +268,7 @@ tab4type="java" tab4id="Proxy_Python" tab4name="Python" tab4path="embed/proxy_py
 
 &nbsp;In this code:
 - The Java class `ComputedArray` implements the proxy interface `ProxyArray` so
-that guest languages treat instances of the Java class like arrays.
+that guest languages treat instances of the Java class-like arrays.
 - `ComputedArray` array overrides the method `get` and computes the value
 using an arithmetic expression.
 - The array proxy does not support write access. For this reason, it throws
@@ -285,7 +294,7 @@ These restrictions can be lifted entirely by setting `allowAllAccess` to `true`.
 
 ### Controlling Access to Host Functions
 
-It might be desireable to limit the access of guest applications to the host.
+It might be desirable to limit the access of guest applications to the host.
 For example, if a Java method is exposed that calls `System.exit` then the guest application will be able to exit the host process.
 In order to avoid accidentally exposed methods, no host access is allowed by default and every public method or field needs to be annotated with `@HostAccess.Export` explicitly.
 
@@ -308,7 +317,7 @@ Host access is fully customizable by creating a custom [`HostAccess`](https://ww
 ### Controlling Host Callback Parameter Scoping
 
 By default, a `Value` lives as long as the corresponding `Context`.
-However, it may be desireable to change this default behavior and bind a value to a scope, such that when execution leaves the scope, the value is invalidated.
+However, it may be desirable to change this default behavior and bind a value to a scope, such that when execution leaves the scope, the value is invalidated.
 An example for such a scope are guest-to-host callbacks, where a `Value` may be passed as a callback parameter.
 We have already seen above how passing callback parameters works with the default `HostAccess.EXPLICIT`:
 
@@ -338,7 +347,7 @@ public static void main(String[] args) {
 
 In this example, `lastResult` maintains a reference to the value from the guest that is stored on the host and remains accessible also after the scope of `callback()` has ended.
 
-However, this is not always desireable, as keeping the value alive may block resources unnecessarily or not reflect the behavior of ephemeral values correctly.
+However, this is not always desirable, as keeping the value alive may block resources unnecessarily or not reflect the behavior of ephemeral values correctly.
 For these cases, `HostAccess.SCOPED` can be used, which changes the default behavior for all callbacks, such that values that are passed as callback parameters are only valid for the duration of the callback.
 
 To make the above code work with `HostAccess.SCOPED`, individual values passed as a callback parameters can be pinned to extend their validity until after the callback returns:
@@ -428,17 +437,17 @@ This table shows the level of optimizations the Java runtimes currently provide:
 ### Explanations
 
 * **Optimized:** Executed guest application code can be compiled and executed as highly efficient machine code at run time.
-* **Optimized with additional compiler passes:** Oracle GraalVM implements additional optimizations performed during run-time compilation. For example, it uses a more advanced inlining heuristic. This typically leads to better run-time performance and memory consumption.
+* **Optimized with additional compiler passes:** Oracle GraalVM implements additional optimizations performed during runtime compilation. For example, it uses a more advanced inlining heuristic. This typically leads to better runtime performance and memory consumption.
 * **Optimized if enabled via experimental VM option:** Optimization is not enabled by default and must be enabled using `-XX:+EnableJVMCI` virtual machine option. In addition, to support compilation, the Graal compiler must be downloaded as a JAR file and put on the `--upgrade-module-path`. In this mode, the compiler runs as a Java application and may negatively affect the execution performance of the host application.
 * **No runtime optimizations:** With no runtime optimizations or if JVMCI is not enabled, the guest application code is executed in interpreter-only mode. 
 * **JVMCI:** Refers to the [Java-Level JVM Compiler Interface](https://openjdk.org/jeps/243) supported by most Java runtimes.
 
-A project has been created to enable run-time optimization by default for Oracle JDK and OpenJDK.
+A project has been created to enable runtime optimization by default for Oracle JDK and OpenJDK.
 See [Project Galahad](https://openjdk.org/projects/galahad/) for further details.
 
 ### Enable Optimization on OpenJDK and Oracle JDK
 
-When running on a JDK run-time optimization enabled by default, like OpenJDK, you might see a warning like this:
+When running on a JDK runtime optimization enabled by default, such as OpenJDK, you might see a warning like this:
 
 ```
 [engine] WARNING: The polyglot engine uses a fallback runtime that does not support runtime compilation to machine code.
@@ -447,14 +456,13 @@ Execution without runtime compilation will negatively impact the guest applicati
 
 This indicates that the guest application is executed with no runtime optimizations enabled.
 The warning can be suppressed by either suppressing using the `--engine.WarnInterpreterOnly=false` option or the `-Dpolyglot.engine.WarnInterpreterOnly=false` system property.
-In addition, the `compiler.jar` and its dependencies must be downloaded from [Maven Central](https://central.sonatype.com/artifact/org.graalvm.compiler/compiler/) and referred to use the option `--upgrade-module-path`. 
-Note that the compiler jar must *not* be put on the module or class path. 
+In addition, the `compiler.jar` file and its dependencies must be downloaded from [Maven Central](https://central.sonatype.com/artifact/org.graalvm.compiler/compiler/) and referred to use the option `--upgrade-module-path`. 
+Note that `compiler.jar` must *not* be put on the module or class path. 
 Refer to the [polyglot embedding demonstration](https://github.com/graalvm/polyglot-embedding-demo) for an example configuration using Maven or Gradle.
-
 
 ### Switching to the Fallback Engine
 
-If the need arises, for example, running only trivial scripts or in the resource-constrained systems, you may want to switch to the fallback engine without run-time optimizations.
+If the need arises, for example, running only trivial scripts or in the resource-constrained systems, you may want to switch to the fallback engine without runtime optimizations.
 Since Polyglot version 23.1, the fallback engine can be activated by removing the `truffle-runtime` and `truffle-enterprise` modules from the class or module path.
 
 This can be achieved with Maven like this:
@@ -480,15 +488,15 @@ This can be achieved with Maven like this:
 ```
 
 The exclusion rule for `truffle-enterprise` is unnecessary if you only use `-community` dependencies.
-Since `truffle-enterprise` is excluded, the fallback engine does not support advanced extensions like sandbox limits or polyglot isolates.
+Since `truffle-enterprise` is excluded, the fallback engine does not support advanced extensions such as sandbox limits or polyglot isolates.
 It may be useful to double-check with `mvn dependency:tree` that the two dependencies are not included elsewhere.
 
 If the runtime was excluded successfully, you should see the following log message:
 
-```shell
+```
 [engine] WARNING: The polyglot engine uses a fallback runtime that does not support runtime compilation to native code.
 Execution without runtime compilation will negatively impact the guest application performance.
-The following cause was found: No optimizing Truffle runtime found on the module or class-path.
+The following cause was found: No optimizing Truffle runtime found on the module or class path.
 For more information see: https://www.graalvm.org/latest/reference-manual/embed-languages/.
 To disable this warning use the '--engine.WarnInterpreterOnly=false' option or the '-Dpolyglot.engine.WarnInterpreterOnly=false' system property.
 ```
@@ -497,10 +505,9 @@ You can disable this message using the indicated options as an additional step.
 
 Removing these dependencies also automatically switches to the fallback engine in Native Image builds.
 
-
 ## Build Native Executables from Polyglot Applications
 
-With Polyglot version 23.1 on GraalVM for JDK 21, no special configuration is required to use [Native Image](../native-image/README.md) to build images with embedded polyglot language runtimes.
+With Polyglot version 23.1 on GraalVM for JDK 21 and later, no special configuration is required to use [Native Image](../native-image/README.md) to build images with embedded polyglot language runtimes.
 Like any other Java dependency, the polyglot language JAR files must be on the class or module path when building a native executable.
 We recommend to use the [Maven](https://graalvm.github.io/native-build-tools/latest/maven-plugin.html) or [Gradle](https://graalvm.github.io/native-build-tools/latest/gradle-plugin.html) Native Image plugins to configure your `native-image` builds.
 A sample Maven and Gradle configuration for Native Image can be found in the [polyglot embedding demonstration repository](https://github.com/graalvm/polyglot-embedding-demo).
@@ -515,7 +522,7 @@ Here is a Maven profile configuration example:
                 <plugin>
                     <groupId>org.graalvm.buildtools</groupId>
                     <artifactId>native-maven-plugin</artifactId>
-                    <version>0.9.25</version>
+                    <version>0.10.1</version>
                     <extensions>true</extensions>
                     <executions>
                         <execution>
@@ -546,15 +553,14 @@ To build a native executable with the above configuration, run:
 mvn -Pnative package
 ```
 
-To build a native executable from a polyglot application, for example, a Java-host application embedding Python, a `./resources` folder containing all the required files is created by default.
-By default, the language runtime will look for the resources folder relative to the native executable or library image that was built.
+To build a native executable from a polyglot application, for example, a Java-host application embedding Python, a `./resources` directory containing all the required files is created by default.
+By default, the language runtime will look for the resources directory relative to the native executable or library image that was built.
 At run time, the lookup location may be customized using the `-Dpolyglot.engine.resourcePath=path/to/resources` option.
 To disable the resource creation, the `-H:-CopyLanguageResources` build-time option may be used.
-Note that some languages may not support running without a resources folder.
+Note that some languages may not support running without a resources directory.
 
-With Polyglot version 23.1 the language home options like `-Dorg.graalvm.home` should no longer be used and were replaced with the resource folder option.
+With Polyglot version 23.1 the language home options like `-Dorg.graalvm.home` should no longer be used and were replaced with the resource directory option.
 The language home options remain functional for compatibility reasons but may be removed in future releases.
-
 
 ### Configuring Native Host Reflection
 
@@ -671,10 +677,9 @@ We recommend, therefore, keeping a strong reference to the `Source` object as lo
 
 To summarize, the code cache can be controlled by keeping and maintaining strong references to the `Engine` and `Source` objects.
 
-
 ## Polyglot Isolates
 
-On Oracle GraalVM, a Polyglot engine can be configured to run in a dedicated Native Image isolate.
+On Oracle GraalVM, a polyglot engine can be configured to run in a dedicated Native Image isolate.
 A polyglot engine in this mode executes within a VM-level fault domain with a dedicated garbage collector and JIT compiler.
 Polyglot isolates are useful for [polyglot sandboxing](../../security/polyglot-sandbox.md).
 Running languages in an isolate works with HotSpot and Native Image host virtual machines.
@@ -686,23 +691,50 @@ For example, a dependency on isolated JavaScript can be configured by adding a M
 <dependency>
     <groupId>org.graalvm.polyglot</groupId>
     <artifactId>polyglot</artifactId>
-    <version>23.1.0</version>
+    <version>${graalvm.polyglot.version}</version>
     <type>jar</type>
 </dependency>
 <dependency>
     <groupId>org.graalvm.polyglot</groupId>
     <artifactId>js-isolate</artifactId>
-    <version>23.1.0</version>
+    <version>${graalvm.polyglot.version}</version>
     <type>pom</type>
 </dependency>
 ```
 
-The downloaded dependency is platform-independent, which contains a native-image for each platform.
-We plan to support downloading polyglot isolate native images for individual platforms in a future release.
+Starting from the Polyglot API version 24.1.0, the polyglot engine supports polyglot isolates for individual platforms.
+To download a polyglot isolate for a specific platform, append the operating system and
+CPU architecture classifiers to the polyglot isolate Maven `artifactId`. For example,
+to configure a dependency on isolated Python for Linux amd64, add the following Maven dependencies:
+
+```xml
+<dependency>
+	<groupId>org.graalvm.polyglot</groupId>
+	<artifactId>polyglot</artifactId>
+	<version>${graalvm.polyglot.version}</version>
+	<type>jar</type>
+</dependency>
+<dependency>
+	<groupId>org.graalvm.polyglot</groupId>
+	<artifactId>python-isolate-linux-amd64</artifactId>
+	<version>${graalvm.polyglot.version}</version>
+	<type>pom</type>
+</dependency>
+```
+
+Supported platform classifiers are:
+* `linux-amd64`
+* `linux-aarch64`
+* `darwin-amd64`
+* `darwin-aarch64`
+* `windows-amd64`
+
+For a complete Maven POM file that adds the polyglot isolate Native Image dependency for the current platform,
+refer to the [Polyglot Embedding Demonstration](https://github.com/graalvm/polyglot-embedding-demo) on GitHub.
+
 
 To enable isolate usage with the Polyglot API, the `--engine.SpawnIsolate=true` option must be passed to `Engine` or `Context` when constructed.
-The option `engine.SpawnIsolate` may not be available if used on any other JDK than Oracle GraalVM.
-
+The option `engine.SpawnIsolate` may not be available if used on any JDK other than Oracle GraalVM.
 
 ```java
 import org.graalvm.polyglot.*;
@@ -713,7 +745,7 @@ public class PolyglotIsolate {
 			  .allowHostAccess(HostAccess.SCOPED)
 			  .option("engine.SpawnIsolate", "true").build()) {
 			  
-			Value function = context.eval("js", "x => x+1")
+			Value function = context.eval("js", "x => x+1");
 			assert function.canExecute();
 			int x = function.execute(41).asInt();
 			assert x == 42;
@@ -722,12 +754,12 @@ public class PolyglotIsolate {
 }
 ```
 
-Currently, we support the following languages as polyglot isolates:
+Currently, the following languages are available as polyglot isolates:
 
-| Language.                                     | Polyglot Isolate Support                         |
-|-----------------------------------------------|--------------------------------------------------|
-| JavaScript (`js-isolate`)                     | Supported with version 23.1                      |
-
+| Language                      | Available from |
+|-------------------------------|----------------|
+| JavaScript (`js-isolate`)     | 23.1           |
+| Python (`python-isolate`)     | 24.1           |
 
 We plan to add support for more languages in future versions.
 
@@ -760,10 +792,9 @@ public class PolyglotIsolateMultipleContexts {
 }
 ```
 
-
 ### Passing Native Image Runtime Options
 
-Engines running in an isolate can make use of [Native Image runtime options](../native-image/HostedvsRuntimeOptions.md) by passing `--engine.IsolateOption.<option>` to the engine builder.
+Engines running in an isolate can make use of [Native Image runtime options](../native-image/BuildOptions.md) by passing `--engine.IsolateOption.<option>` to the engine builder.
 For example, this can be used to limit the maximum heap memory used by an engine by setting the maximum heap size for the isolate via `--engine.IsolateOption.MaxHeapSize=128m`:
 
 ```java
@@ -797,7 +828,6 @@ The host callback fails if the available stack size drops below the specified th
 In Linux environments that support Memory Protection Keys, the `--engine.MemoryProtection=true` option can be used to isolate the heaps of Polyglot Isolates at the hardware level.
 If an engine is created with this option, a dedicated protection key will be allocated for the isolated engine's heap.
 GraalVM only enables access to the engine's heap when executing code of the Polyglot Isolate.
-
 
 ## Embed Guest Languages in Java
 
@@ -878,7 +908,7 @@ for (;;) {
 
 The GraalVM Polyglot API allows users to instrument the execution of guest languages through [ExecutionListener class](http://www.graalvm.org/sdk/javadoc/org/graalvm/polyglot/management/ExecutionListener.html).
 For example, it lets you attach an execution listener that is invoked for every statement of the guest language program.
-Execution listeners are designed as simple API for polyglot embedders and may become handy in, e.g., single-stepping through the program.
+Execution listeners are designed as simple API for polyglot embedders and may become handy in, for example, single-stepping through the program.
 
 ```java
 import org.graalvm.polyglot.*;
@@ -908,7 +938,6 @@ In this code:
 - The `context.eval()` call evaluates a specified snippet of guest language code.
 - The `listener.close()` closes a listener earlier, however execution listeners are automatically closed with the engine.
 
-
 ## Compatibility with JSR-223 ScriptEngine
 
 <!--
@@ -934,10 +963,10 @@ public final class CHANGE_NAME_EngineFactory implements ScriptEngineFactory {
     private static final String LANGUAGE_ID = "<<INSERT LANGUAGE ID HERE>>";
 ```
 
-Rename the class as desired and change the `LANGUAGE_ID` to the desired Truffle language (e.g. "python" for GraalPy or "ruby" for TruffleRuby). 
+Rename the class as desired and change the `LANGUAGE_ID` to the desired Truffle language (for example, "python" for GraalPy or "ruby" for TruffleRuby). 
 To use it, include a `META-INF/services/javax.script.ScriptEngineFactory` file in your resources with the chosen class name.
 This will allow the default `javax.script.ScriptEngineManager` to discover the language automatically.
-Alternatively, the factory can be registerd via `javax.script.ScriptEngineManager#registerEngineName` or instantiated and used directly.
+Alternatively, the factory can be registered via `javax.script.ScriptEngineManager#registerEngineName` or instantiated and used directly.
 
 The best practice is to close the `ScriptEngine` when no longer used rather than relying on finalizers.
 To close it, use `((AutoCloseable) scriptEngine).close();` since `ScriptEngine` does not have a `close()` method.
