@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -34,18 +34,9 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import org.graalvm.collections.EconomicMap;
 import org.graalvm.collections.Equivalence;
-import jdk.graal.compiler.code.CompilationResult;
-import jdk.graal.compiler.core.common.LIRKind;
-import jdk.graal.compiler.core.common.NumUtil;
-import jdk.graal.compiler.core.common.type.CompressibleConstant;
-import jdk.graal.compiler.core.common.util.FrequencyEncoder;
-import jdk.graal.compiler.core.common.util.TypeConversion;
-import jdk.graal.compiler.core.common.util.UnsafeArrayTypeWriter;
-import jdk.graal.compiler.nodes.FrameState;
 import org.graalvm.nativeimage.ImageSingletons;
 
 import com.oracle.svm.core.CalleeSavedRegisters;
@@ -55,6 +46,7 @@ import com.oracle.svm.core.c.NonmovableArray;
 import com.oracle.svm.core.c.NonmovableArrays;
 import com.oracle.svm.core.code.CodeInfoEncoder.Counters;
 import com.oracle.svm.core.code.CodeInfoEncoder.Encoders;
+import com.oracle.svm.core.code.FrameInfoDecoder.ConstantAccess;
 import com.oracle.svm.core.code.FrameInfoQueryResult.ValueInfo;
 import com.oracle.svm.core.code.FrameInfoQueryResult.ValueType;
 import com.oracle.svm.core.config.ConfigurationValues;
@@ -63,13 +55,19 @@ import com.oracle.svm.core.hub.LayoutEncoding;
 import com.oracle.svm.core.meta.SharedField;
 import com.oracle.svm.core.meta.SharedMethod;
 import com.oracle.svm.core.meta.SharedType;
-import com.oracle.svm.core.meta.SubstrateObjectConstant;
-import com.oracle.svm.core.sampler.CallStackFrameMethodData;
-import com.oracle.svm.core.sampler.CallStackFrameMethodInfo;
+import com.oracle.svm.core.nmt.NmtCategory;
 import com.oracle.svm.core.util.ByteArrayReader;
 import com.oracle.svm.core.util.HostedStringDeduplication;
 import com.oracle.svm.core.util.VMError;
 
+import jdk.graal.compiler.code.CompilationResult;
+import jdk.graal.compiler.core.common.LIRKind;
+import jdk.graal.compiler.core.common.NumUtil;
+import jdk.graal.compiler.core.common.type.CompressibleConstant;
+import jdk.graal.compiler.core.common.util.FrequencyEncoder;
+import jdk.graal.compiler.core.common.util.TypeConversion;
+import jdk.graal.compiler.core.common.util.UnsafeArrayTypeWriter;
+import jdk.graal.compiler.nodes.FrameState;
 import jdk.vm.ci.code.BytecodeFrame;
 import jdk.vm.ci.code.DebugInfo;
 import jdk.vm.ci.code.Register;
@@ -132,16 +130,23 @@ public class FrameInfoEncoder {
 
         @Override
         protected void fillSourceFields(ResolvedJavaMethod method, FrameInfoQueryResult resultFrameInfo) {
-            final StackTraceElement source = method.asStackTraceElement(resultFrameInfo.getBci());
-            resultFrameInfo.sourceClass = getDeclaringJavaClass(method);
+            // The method table is built during encoding and the method id will be assigned then.
+            resultFrameInfo.setSourceMethod(method);
+
+            StackTraceElement source = method.asStackTraceElement(resultFrameInfo.getBci());
+            resultFrameInfo.sourceLineNumber = source.getLineNumber();
+
+            Class<?> sourceClass = getDeclaringJavaClass(method);
             /*
              * There is no need to have method names as interned strings. But at least sometimes the
              * StackTraceElement contains interned strings, so we un-intern these strings and
              * perform our own de-duplication.
              */
-            resultFrameInfo.sourceMethodName = stringTable.deduplicate(source.getMethodName(), true);
-            resultFrameInfo.sourceLineNumber = source.getLineNumber();
-            resultFrameInfo.methodId = ImageSingletons.lookup(FrameInfoMethodData.class).getMethodId(method);
+            int sourceMethodModifiers = method.getModifiers();
+            String methodSignature = method.getSignature().toMethodDescriptor();
+            String sourceMethodName = stringTable.deduplicate(source.getMethodName(), true);
+            String sourceMethodSignature = CodeInfoEncoder.shouldEncodeAllMethodMetadata() ? stringTable.deduplicate(methodSignature, true) : methodSignature;
+            resultFrameInfo.setSourceFields(sourceClass, sourceMethodName, sourceMethodSignature, sourceMethodModifiers);
         }
 
         protected abstract Class<?> getDeclaringJavaClass(ResolvedJavaMethod method);
@@ -150,17 +155,14 @@ public class FrameInfoEncoder {
     public abstract static class SourceFieldsFromImage extends Customization {
         @Override
         protected void fillSourceFields(ResolvedJavaMethod method, FrameInfoQueryResult resultFrameInfo) {
-            final int deoptOffsetInImage = ((SharedMethod) method).getDeoptOffsetInImage();
+            final int deoptOffsetInImage = ((SharedMethod) method).getImageCodeDeoptOffset();
             if (deoptOffsetInImage != 0) {
-                CodeInfoQueryResult targetCodeInfo = CodeInfoTable.lookupDeoptimizationEntrypoint(deoptOffsetInImage, resultFrameInfo.encodedBci);
+                CodeInfo codeInfo = CodeInfoTable.getImageCodeInfo((SharedMethod) method);
+                CodeInfoQueryResult targetCodeInfo = CodeInfoTable.lookupDeoptimizationEntrypoint(codeInfo, deoptOffsetInImage, resultFrameInfo.encodedBci);
                 if (targetCodeInfo != null) {
-                    final FrameInfoQueryResult targetFrameInfo = targetCodeInfo.getFrameInfo();
-                    assert targetFrameInfo != null;
-
-                    resultFrameInfo.sourceClass = targetFrameInfo.sourceClass;
-                    resultFrameInfo.sourceMethodName = targetFrameInfo.sourceMethodName;
+                    FrameInfoQueryResult targetFrameInfo = targetCodeInfo.getFrameInfo();
+                    resultFrameInfo.sourceMethodId = targetFrameInfo.sourceMethodId;
                     resultFrameInfo.sourceLineNumber = targetFrameInfo.sourceLineNumber;
-                    resultFrameInfo.methodId = targetFrameInfo.methodId;
                 }
             } else {
                 /*
@@ -193,11 +195,14 @@ public class FrameInfoEncoder {
     }
 
     record CompressedFrameData(
+                    int methodId,
+                    ResolvedJavaMethod sourceMethod, // for when methodId is not yet known (== 0)
                     Class<?> sourceClass,
                     String sourceMethodName,
+                    String sourceMethodSignature,
+                    int sourceMethodModifier,
                     int sourceLineNumber,
                     long encodedBci,
-                    int methodId,
                     boolean isSliceEnd) {
     }
 
@@ -311,7 +316,7 @@ public class FrameInfoEncoder {
                                     result = -Integer.compare(frameMaxHeight.get(f1), frameMaxHeight.get(f2));
                                 }
                                 return result;
-                            }).collect(Collectors.toList());
+                            }).toList();
             for (CompressedFrameData frame : sharedFrames) {
                 assert !sharedEncodedFrameIndexMap.containsKey(frame) : frame;
                 sharedEncodedFrameIndexMap.put(frame, encodingBuffer.getBytesWritten());
@@ -350,7 +355,7 @@ public class FrameInfoEncoder {
                     return sharedEncodedFrameIndexMap.containsKey(frame) && (frameSuccessors == null || frameSuccessors.size() == 1);
                 });
                 if (directlyPointToSharedFrame) {
-                    CompressedFrameData frame = slice.get(0);
+                    CompressedFrameData frame = slice.getFirst();
                     assert sharedEncodedFrameIndexMap.containsKey(frame) : frame;
                     encodedSliceIndexMap.put(sliceIdx, sharedEncodedFrameIndexMap.get(frame));
                 } else {
@@ -396,15 +401,16 @@ public class FrameInfoEncoder {
         }
 
         private static void encodeCompressedFrame(UnsafeArrayTypeWriter encodingBuffer, Encoders encoders, CompressedFrameData frame, int uniqueSuccessorIndex) {
-            int classIndex = encoders.sourceClasses.getIndex(frame.sourceClass);
-            int methodIndex = encoders.sourceMethodNames.getIndex(frame.sourceMethodName);
+            int methodId = frame.methodId;
+            if (frame.sourceMethod != null) {
+                assert methodId == 0;
+                methodId = encoders.findMethodIndex(frame.sourceMethod, frame.sourceClass, frame.sourceMethodName, frame.sourceMethodSignature, frame.sourceMethodModifier, false);
+            }
 
-            encodingBuffer.putSV(encodeCompressedFirstEntry(classIndex, true));
+            encodingBuffer.putSV(encodeCompressedFirstEntry(methodId, true));
             boolean encodeUniqueSuccessor = uniqueSuccessorIndex != NO_SUCCESSOR_INDEX_MARKER;
-            encodingBuffer.putSV(encodeCompressedMethodIndex(methodIndex, encodeUniqueSuccessor));
             encodingBuffer.putSV(encodeCompressedSourceLineNumber(frame.sourceLineNumber, frame.isSliceEnd));
-            encodingBuffer.putUV(frame.encodedBci);
-            encodingBuffer.putSV(frame.methodId);
+            encodingBuffer.putSV(encodeCompressedEncodedBci(frame.encodedBci, encodeUniqueSuccessor));
             if (encodeUniqueSuccessor) {
                 encodingBuffer.putSV(uniqueSuccessorIndex);
             }
@@ -417,21 +423,24 @@ public class FrameInfoEncoder {
             return encodedSliceIndex;
         }
 
-        /**
-         * When verifying the frame encoding, sourceClassIndex and sourceMethodNameIndex must be
-         * filled in correctly.
-         */
+        /** When verifying the frame encoding, the method id must be filled in. */
         boolean writeFrameVerificationInfo(FrameData data, Encoders encoders) {
             int curIdx = 0;
             List<CompressedFrameData> slice = frameSlices.get(data.frameSliceIndex);
             for (FrameInfoQueryResult cur = data.frame; cur != null; cur = cur.caller) {
                 assert cur == data.frame || !cur.isDeoptEntry : "Deoptimization entry information for caller frames is not persisted";
 
-                cur.sourceClassIndex = encoders.sourceClasses.getIndex(cur.sourceClass);
-                cur.sourceMethodNameIndex = encoders.sourceMethodNames.getIndex(cur.sourceMethodName);
-                boolean isSliceEnd = cur.caller == null;
-                CompressedFrameData frame = new CompressedFrameData(cur.sourceClass, cur.sourceMethodName, cur.sourceLineNumber, cur.encodedBci, cur.methodId, isSliceEnd);
-                assert frame.equals(slice.get(curIdx)) : frame;
+                int previousMethodId = cur.sourceMethodId;
+                if (cur.getSourceMethod() != null) {
+                    cur.sourceMethodId = encoders.findMethodIndex(cur.getSourceMethod(), cur.getSourceClass(), cur.getSourceMethodName(), cur.getSourceMethodSignature(),
+                                    cur.getSourceMethodModifiers(), false);
+                    assert previousMethodId == 0 || previousMethodId == cur.sourceMethodId;
+                }
+
+                boolean isSliceEnd = (cur.caller == null);
+                CompressedFrameData expected = new CompressedFrameData(previousMethodId, cur.getSourceMethod(), cur.getSourceClass(), cur.getSourceMethodName(),
+                                cur.getSourceMethodSignature(), cur.getSourceMethodModifiers(), cur.sourceLineNumber, cur.encodedBci, isSliceEnd);
+                assert expected.equals(slice.get(curIdx)) : expected;
                 curIdx++;
             }
             assert frameSlices.get(data.frameSliceIndex).size() == curIdx : curIdx;
@@ -444,20 +453,26 @@ public class FrameInfoEncoder {
     private final List<FrameData> allDebugInfos;
     private final Encoders encoders;
     private final CompressedFrameInfoEncodingMetadata frameMetadata;
+    private final ConstantAccess constantAccess;
 
     private final CalleeSavedRegisters calleeSavedRegisters;
 
-    protected FrameInfoEncoder(Customization customization, Encoders encoders) {
+    protected FrameInfoEncoder(Customization customization, Encoders encoders, ConstantAccess constantAccess) {
         this.customization = customization;
         this.encoders = encoders;
         this.allDebugInfos = new ArrayList<>();
         this.frameMetadata = new CompressedFrameInfoEncodingMetadata();
+        this.constantAccess = constantAccess;
 
         if (CalleeSavedRegisters.supportedByPlatform()) {
             calleeSavedRegisters = CalleeSavedRegisters.singleton();
         } else {
             calleeSavedRegisters = null;
         }
+    }
+
+    public ConstantAccess getConstantAccess() {
+        return constantAccess;
     }
 
     protected FrameData addDebugInfo(ResolvedJavaMethod method, CompilationResult compilation, Infopoint infopoint, int totalFrameSize) {
@@ -475,17 +490,17 @@ public class FrameInfoEncoder {
             assert bytecodeFrame != null;
             customization.fillSourceFields(bytecodeFrame.getMethod(), resultFrame);
 
-            // save source class and method name
-            final Class<?> sourceClass = resultFrame.sourceClass;
-            final String sourceMethodName = resultFrame.sourceMethodName;
-            encoders.sourceClasses.addObject(sourceClass);
-            encoders.sourceMethodNames.addObject(sourceMethodName);
+            if (resultFrame.getSourceMethod() != null) {
+                assert resultFrame.sourceMethodId == 0;
+                encoders.addMethod(resultFrame.getSourceMethod(), resultFrame.getSourceClass(), resultFrame.getSourceMethodName(), resultFrame.getSourceMethodSignature(),
+                                resultFrame.getSourceMethodModifiers());
+            }
 
             // save encoding metadata
             assert resultFrame.hasLocalValueInfo() == includeLocalValues : resultFrame;
             if (!includeLocalValues) {
-                CompressedFrameData frame = new CompressedFrameData(sourceClass, sourceMethodName, resultFrame.sourceLineNumber, resultFrame.encodedBci,
-                                resultFrame.methodId, resultFrame.caller == null);
+                CompressedFrameData frame = new CompressedFrameData(resultFrame.sourceMethodId, resultFrame.getSourceMethod(), resultFrame.getSourceClass(), resultFrame.getSourceMethodName(),
+                                resultFrame.getSourceMethodSignature(), resultFrame.getSourceMethodModifiers(), resultFrame.sourceLineNumber, resultFrame.encodedBci, (resultFrame.caller == null));
                 frameSlice.add(frame);
             }
 
@@ -505,14 +520,16 @@ public class FrameInfoEncoder {
         customization.fillSourceFields(method, data.frame);
         // invalidate source line number
         data.frame.sourceLineNumber = -1;
-        // save source class and method name
-        Class<?> sourceClass = data.frame.sourceClass;
-        String sourceMethodName = data.frame.sourceMethodName;
-        encoders.sourceClasses.addObject(sourceClass);
-        encoders.sourceMethodNames.addObject(sourceMethodName);
+
+        if (data.frame.getSourceMethod() != null) {
+            assert data.frame.sourceMethodId == 0;
+            encoders.addMethod(data.frame.getSourceMethod(), data.frame.getSourceClass(), data.frame.getSourceMethodName(), data.frame.getSourceMethodSignature(),
+                            data.frame.getSourceMethodModifiers());
+        }
 
         // save encoding metadata
-        CompressedFrameData frame = new CompressedFrameData(sourceClass, sourceMethodName, data.frame.sourceLineNumber, data.frame.encodedBci, data.frame.methodId, true);
+        CompressedFrameData frame = new CompressedFrameData(data.frame.sourceMethodId, data.frame.getSourceMethod(), data.frame.getSourceClass(), data.frame.getSourceMethodName(),
+                        data.frame.getSourceMethodSignature(), data.frame.getSourceMethodModifiers(), data.frame.sourceLineNumber, data.frame.encodedBci, true);
         frameMetadata.addFrameSlice(data, List.of(frame));
 
         allDebugInfos.add(data);
@@ -534,8 +551,7 @@ public class FrameInfoEncoder {
 
     private static void countVirtualObjects(JavaValue[] values, BitSet visitedVirtualObjects) {
         for (JavaValue value : values) {
-            if (value instanceof VirtualObject) {
-                VirtualObject virtualObject = (VirtualObject) value;
+            if (value instanceof VirtualObject virtualObject) {
                 if (!visitedVirtualObjects.get(virtualObject.getId())) {
                     visitedVirtualObjects.set(virtualObject.getId());
                     countVirtualObjects(virtualObject.getValues(), visitedVirtualObjects);
@@ -556,17 +572,13 @@ public class FrameInfoEncoder {
 
         ValueInfo[] valueInfos = null;
         SharedMethod method = (SharedMethod) frame.getMethod();
-        if (ImageSingletons.contains(CallStackFrameMethodData.class)) {
-            frameInfo.methodId = ImageSingletons.lookup(CallStackFrameMethodData.class).getMethodId(method);
-            ImageSingletons.lookup(CallStackFrameMethodInfo.class).addMethodInfo(method, frameInfo.methodId);
-        }
 
         if (needLocalValues) {
-            if (customization.storeDeoptTargetMethod()) {
+            frameInfo.deoptMethodOffset = method.getImageCodeDeoptOffset();
+            if (frameInfo.deoptMethodOffset != 0 && customization.storeDeoptTargetMethod()) {
                 frameInfo.deoptMethod = method;
-                encoders.objectConstants.addObject(SubstrateObjectConstant.forObject(method));
+                encoders.objectConstants.addObject(constantAccess.forObject(method, false));
             }
-            frameInfo.deoptMethodOffset = method.getDeoptOffsetInImage();
 
             frameInfo.numLocals = frame.numLocals;
             frameInfo.numStack = frame.numStack;
@@ -609,8 +621,7 @@ public class FrameInfoEncoder {
         ValueInfo result = new ValueInfo();
         result.kind = kind;
 
-        if (value instanceof StackLockValue) {
-            StackLockValue lock = (StackLockValue) value;
+        if (value instanceof StackLockValue lock) {
             assert ValueUtil.isIllegal(lock.getSlot()) : value;
             if (isDeoptEntry && lock.isEliminated()) {
                 throw VMError.shouldNotReachHere("Cannot have an eliminated monitor in a deoptimization entry point: value " + value + " in method " +
@@ -625,8 +636,7 @@ public class FrameInfoEncoder {
             result.type = ValueType.Illegal;
             assert result.kind == JavaKind.Illegal : value;
 
-        } else if (value instanceof StackSlot) {
-            StackSlot stackSlot = (StackSlot) value;
+        } else if (value instanceof StackSlot stackSlot) {
             result.type = ValueType.StackSlot;
             result.data = stackSlot.getOffset(data.totalFrameSize);
             // TODO BS GR-42085 The first check is needed when safe-point sampling is on. Is this
@@ -644,13 +654,12 @@ public class FrameInfoEncoder {
             result.isCompressedReference = isCompressedReference(register);
             ImageSingletons.lookup(Counters.class).registerValueCount.inc();
 
-        } else if (calleeSavedRegisters != null && value instanceof RegisterValue) {
+        } else if (calleeSavedRegisters != null && value instanceof RegisterValue registerValue) {
             if (isDeoptEntry) {
                 throw VMError.shouldNotReachHere("Cannot encode registers in deoptimization entry point: value " + value + " in method " +
                                 data.debugInfo.getBytecodePosition().getMethod().format("%H.%n(%p)"));
             }
 
-            RegisterValue registerValue = (RegisterValue) value;
             Register register = ValueUtil.asRegister(registerValue);
             if (!calleeSavedRegisters.calleeSaveable(register)) {
                 throw VMError.shouldNotReachHere("Register is not calleeSaveable: register " + registerValue + " in method " + data.debugInfo.getBytecodePosition().getMethod().format("%H.%n(%p)"));
@@ -665,8 +674,7 @@ public class FrameInfoEncoder {
             result.isCompressedReference = registerValue.getPlatformKind().getVectorLength() == 1 && isCompressedReference(registerValue);
             ImageSingletons.lookup(Counters.class).registerValueCount.inc();
 
-        } else if (value instanceof JavaConstant) {
-            JavaConstant constant = (JavaConstant) value;
+        } else if (value instanceof JavaConstant constant) {
             result.value = constant;
             if (constant instanceof CompressibleConstant) {
                 result.isCompressedReference = ((CompressibleConstant) constant).isCompressed();
@@ -714,7 +722,7 @@ public class FrameInfoEncoder {
         ArrayList<ValueInfo> valueList = new ArrayList<>(virtualObject.getValues().length + 4);
         SharedType type = (SharedType) virtualObject.getType();
         /* The first element is the hub of the virtual object. */
-        valueList.add(makeValueInfo(data, JavaKind.Object, SubstrateObjectConstant.forObject(type.getHub()), isDeoptEntry));
+        valueList.add(makeValueInfo(data, JavaKind.Object, constantAccess.forObject(type.getHub(), false), isDeoptEntry));
 
         ObjectLayout objectLayout = ConfigurationValues.getObjectLayout();
         assert type.isArray() == LayoutEncoding.isArray(type.getHub().getLayoutEncoding()) : "deoptimization code uses layout encoding to determine if type is an array";
@@ -816,7 +824,7 @@ public class FrameInfoEncoder {
             }
         }
 
-        data.virtualObjects[id] = valueList.toArray(new ValueInfo[valueList.size()]);
+        data.virtualObjects[id] = valueList.toArray(new ValueInfo[0]);
         ImageSingletons.lookup(Counters.class).virtualObjectsCount.inc();
     }
 
@@ -873,8 +881,8 @@ public class FrameInfoEncoder {
         return result;
     }
 
-    protected void encodeAllAndInstall(CodeInfo target) {
-        NonmovableArray<Byte> frameInfoEncodings = encodeFrameDatas();
+    protected void encodeAllAndInstall(CodeInfo target, Runnable recordActivity) {
+        NonmovableArray<Byte> frameInfoEncodings = encodeFrameDatas(recordActivity);
         install(target, frameInfoEncodings);
     }
 
@@ -888,10 +896,10 @@ public class FrameInfoEncoder {
     private static void afterInstallation(CodeInfo info) {
         ImageSingletons.lookup(Counters.class).frameInfoSize.add(
                         ConfigurationValues.getObjectLayout().getArrayElementOffset(JavaKind.Byte, NonmovableArrays.lengthOf(CodeInfoAccess.getFrameInfoEncodings(info))) +
-                                        ConfigurationValues.getObjectLayout().getArrayElementOffset(JavaKind.Object, NonmovableArrays.lengthOf(CodeInfoAccess.getFrameInfoObjectConstants(info))));
+                                        ConfigurationValues.getObjectLayout().getArrayElementOffset(JavaKind.Object, NonmovableArrays.lengthOf(CodeInfoAccess.getObjectConstants(info))));
     }
 
-    private NonmovableArray<Byte> encodeFrameDatas() {
+    private NonmovableArray<Byte> encodeFrameDatas(Runnable recordActivity) {
         UnsafeArrayTypeWriter encodingBuffer = UnsafeArrayTypeWriter.create(ByteArrayReader.supportsUnalignedMemoryAccess());
         frameMetadata.encodeCompressedData(encodingBuffer, encoders);
         for (FrameData data : allDebugInfos) {
@@ -902,8 +910,9 @@ public class FrameInfoEncoder {
                 data.encodedFrameInfoIndex = frameMetadata.getEncodingOffset(data.frameSliceIndex);
                 assert frameMetadata.writeFrameVerificationInfo(data, encoders);
             }
+            recordActivity.run();
         }
-        NonmovableArray<Byte> frameInfoEncodings = NonmovableArrays.createByteArray(TypeConversion.asS4(encodingBuffer.getBytesWritten()));
+        NonmovableArray<Byte> frameInfoEncodings = NonmovableArrays.createByteArray(TypeConversion.asS4(encodingBuffer.getBytesWritten()), NmtCategory.Code);
         encodingBuffer.toByteBuffer(NonmovableArrays.asByteBuffer(frameInfoEncodings));
         return frameInfoEncodings;
     }
@@ -923,14 +932,15 @@ public class FrameInfoEncoder {
 
             int deoptMethodIndex;
             if (cur.deoptMethod != null) {
-                deoptMethodIndex = -1 - encoders.objectConstants.getIndex(SubstrateObjectConstant.forObject(cur.deoptMethod));
+                deoptMethodIndex = -1 - encoders.objectConstants.getIndex(constantAccess.forObject(cur.deoptMethod, false));
                 assert deoptMethodIndex < 0 : cur;
-                assert cur.getDeoptMethodOffset() == cur.deoptMethod.getDeoptOffsetInImage() : cur;
+                assert cur.getDeoptMethodOffset() == cur.deoptMethod.getImageCodeDeoptOffset() : cur;
             } else {
                 deoptMethodIndex = cur.deoptMethodOffset;
                 assert deoptMethodIndex >= 0 : cur;
             }
             encodingBuffer.putSV(deoptMethodIndex);
+            // No need to encode cur.deoptMethodImageCodeInfo: decoding can get it from context
 
             encodeValues(cur.valueInfos, encodingBuffer);
 
@@ -942,16 +952,14 @@ public class FrameInfoEncoder {
                 }
             }
 
-            final int classIndex = encoders.sourceClasses.getIndex(cur.sourceClass);
-            final int methodIndex = encoders.sourceMethodNames.getIndex(cur.sourceMethodName);
+            if (cur.getSourceMethod() != null) {
+                assert cur.sourceMethodId == 0;
+                cur.sourceMethodId = encoders.findMethodIndex(cur.getSourceMethod(), cur.getSourceClass(), cur.getSourceMethodName(), cur.getSourceMethodSignature(), cur.getSourceMethodModifiers(),
+                                false);
+            }
 
-            cur.sourceClassIndex = classIndex;
-            cur.sourceMethodNameIndex = methodIndex;
-
-            encodingBuffer.putSV(classIndex);
-            encodingBuffer.putSV(methodIndex);
+            encodingBuffer.putSV(cur.sourceMethodId);
             encodingBuffer.putSV(cur.sourceLineNumber);
-            encodingBuffer.putUV(cur.methodId);
         }
         encodingBuffer.putUV(FrameInfoDecoder.ENCODED_BCI_NO_CALLER);
     }
@@ -975,14 +983,11 @@ public class FrameInfoEncoder {
     }
 
     protected static long encodePrimitiveConstant(JavaConstant constant) {
-        switch (constant.getJavaKind()) {
-            case Float:
-                return Float.floatToRawIntBits(constant.asFloat());
-            case Double:
-                return Double.doubleToRawLongBits(constant.asDouble());
-            default:
-                return constant.asLong();
-        }
+        return switch (constant.getJavaKind()) {
+            case Float -> Float.floatToRawIntBits(constant.asFloat());
+            case Double -> Double.doubleToRawLongBits(constant.asDouble());
+            default -> constant.asLong();
+        };
     }
 
     private static int encodeFlags(ValueType type, JavaKind kind, boolean isCompressedReference, boolean isEliminatedMonitor) {
@@ -1007,29 +1012,29 @@ public class FrameInfoEncoder {
     }
 
     /**
-     * Encode first value within a compressed frame. This may be either the classIndex, or a pointer
-     * to a shared frame.
+     * Encode first value within a compressed frame. This may be either a method id, or a pointer to
+     * a shared frame.
      *
-     * @param isClassIndex whether this value is a class index or a pointer
+     * @param isMethodId whether this value is a method id, i.e. an index into the method table
      */
-    private static int encodeCompressedFirstEntry(int value, boolean isClassIndex) {
+    private static int encodeCompressedFirstEntry(int value, boolean isMethodId) {
         VMError.guarantee(value >= 0);
-        int encodedValue = isClassIndex ? value : -(value + FrameInfoDecoder.COMPRESSED_FRAME_POINTER_ADDEND);
+        int encodedValue = isMethodId ? value : -(value + FrameInfoDecoder.COMPRESSED_FRAME_POINTER_ADDEND);
 
         VMError.guarantee(encodedValue != FrameInfoDecoder.UNCOMPRESSED_FRAME_SLICE_MARKER);
         return encodedValue;
     }
 
     /**
-     * Encode method index within a compressed frame. If this frame also has a unique shared frame
-     * successor, then the method index is encoded as a negative value.
+     * Compress an encoded bci for a compressed frame. If this frame also has a unique shared frame
+     * successor, then the resulting value is negative.
      */
-    private static int encodeCompressedMethodIndex(int methodIndex, boolean hasUniqueSharedFrameSuccessor) {
-        VMError.guarantee(methodIndex >= 0);
+    private static long encodeCompressedEncodedBci(long encodedBci, boolean hasUniqueSharedFrameSuccessor) {
+        VMError.guarantee(encodedBci >= 0);
         if (!hasUniqueSharedFrameSuccessor) {
-            return methodIndex;
+            return encodedBci;
         } else {
-            return -(methodIndex + FrameInfoDecoder.COMPRESSED_UNIQUE_SUCCESSOR_ADDEND);
+            return -(encodedBci + FrameInfoDecoder.COMPRESSED_UNIQUE_SUCCESSOR_ADDEND);
         }
     }
 
@@ -1046,23 +1051,23 @@ public class FrameInfoEncoder {
     void verifyEncoding(CodeInfo info) {
         for (FrameData expectedData : allDebugInfos) {
             ReusableTypeReader reader = new ReusableTypeReader(CodeInfoAccess.getFrameInfoEncodings(info), expectedData.encodedFrameInfoIndex);
-            FrameInfoQueryResult actualFrame = FrameInfoDecoder.decodeFrameInfo(expectedData.frame.isDeoptEntry, reader, info);
-            FrameInfoVerifier.verifyFrames(expectedData, expectedData.frame, actualFrame);
+            FrameInfoQueryResult actualFrame = FrameInfoDecoder.decodeFrameInfo(expectedData.frame.isDeoptEntry, reader, info, constantAccess);
+            FrameInfoVerifier.verifyFrames(expectedData, expectedData.frame, actualFrame, info);
         }
     }
 }
 
 class FrameInfoVerifier {
-    protected static void verifyFrames(FrameInfoEncoder.FrameData expectedData, FrameInfoQueryResult expectedTopFrame, FrameInfoQueryResult actualTopFrame) {
+    protected static void verifyFrames(FrameInfoEncoder.FrameData expectedData, FrameInfoQueryResult expectedTopFrame, FrameInfoQueryResult actualTopFrame, CodeInfo info) {
         FrameInfoQueryResult expectedFrame = expectedTopFrame;
         FrameInfoQueryResult actualFrame = actualTopFrame;
+        int methodIdAddend = CodeInfoAccess.getMethodTableFirstId(info);
         while (expectedFrame != null) {
             assert actualFrame != null;
             assert expectedFrame.isDeoptEntry() == actualFrame.isDeoptEntry() : actualFrame;
             assert expectedFrame.hasLocalValueInfo() == actualFrame.hasLocalValueInfo() : actualFrame;
             if (expectedFrame.hasLocalValueInfo()) {
                 assert expectedFrame.getEncodedBci() == actualFrame.getEncodedBci() : actualFrame;
-                assert expectedFrame.getMethodId() == actualFrame.getMethodId() : actualFrame;
                 assert expectedFrame.getDeoptMethod() == null && actualFrame.getDeoptMethod() == null ||
                                 (expectedFrame.getDeoptMethod() != null && expectedFrame.getDeoptMethod().equals(actualFrame.getDeoptMethod())) : actualFrame;
                 assert expectedFrame.getDeoptMethodOffset() == actualFrame.getDeoptMethodOffset() : actualFrame;
@@ -1075,13 +1080,8 @@ class FrameInfoVerifier {
                 assert actualFrame.getVirtualObjects() == actualTopFrame.getVirtualObjects() : actualFrame;
             }
 
-            assert Objects.equals(expectedFrame.getSourceClass(), actualFrame.getSourceClass()) : actualFrame;
-            assert Objects.equals(expectedFrame.getSourceMethodName(), actualFrame.getSourceMethodName()) : actualFrame;
+            assert expectedFrame.getSourceMethodId() == (actualFrame.getSourceMethodId() - methodIdAddend) : actualFrame;
             assert expectedFrame.getSourceLineNumber() == actualFrame.getSourceLineNumber() : actualFrame;
-            assert expectedFrame.getMethodId() == actualFrame.getMethodId() : actualFrame;
-
-            assert expectedFrame.sourceClassIndex == actualFrame.sourceClassIndex : actualFrame;
-            assert expectedFrame.sourceMethodNameIndex == actualFrame.sourceMethodNameIndex : actualFrame;
 
             expectedFrame = expectedFrame.caller;
             actualFrame = actualFrame.caller;
