@@ -32,12 +32,12 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.Optional;
 import java.util.Scanner;
 import java.util.function.Consumer;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
 import org.graalvm.nativeimage.ImageSingletons;
@@ -50,6 +50,7 @@ import com.oracle.svm.core.SubstrateUtil;
 import com.oracle.svm.core.option.SubstrateOptionsParser;
 import com.oracle.svm.core.util.InterruptImageBuilding;
 import com.oracle.svm.core.util.UserError;
+import com.oracle.svm.core.util.VMError;
 import com.oracle.svm.hosted.c.libc.HostedLibCBase;
 import com.oracle.svm.hosted.c.util.FileUtils;
 import com.oracle.svm.util.ClassUtil;
@@ -61,7 +62,8 @@ import jdk.vm.ci.code.Architecture;
 import jdk.vm.ci.riscv64.RISCV64;
 
 public abstract class CCompilerInvoker {
-    public static final String VISUAL_STUDIO_MINIMUM_REQUIRED_VERSION = "Visual Studio 2022 version 17.1.0";
+    public static final String VISUAL_STUDIO_MINIMUM_REQUIRED_VERSION = "17.6";
+    public static final String VISUAL_STUDIO_MINIMUM_REQUIRED_VERSION_TEXT = "Visual Studio 2022 version %s.0".formatted(VISUAL_STUDIO_MINIMUM_REQUIRED_VERSION);
 
     public final Path tempDirectory;
     public final CompilerInfo compilerInfo;
@@ -139,44 +141,49 @@ public abstract class CCompilerInvoker {
 
         @Override
         protected List<String> getVersionInfoOptions() {
-            return Collections.emptyList();
+            Path detectVersionInfoFile = tempDirectory.resolve("detect-cl-version-info.c").toAbsolutePath();
+            try {
+                Files.write(detectVersionInfoFile, List.of("M_X64=_M_X64", "M_ARM64EC=_M_ARM64EC", "MSC_FULL_VER=_MSC_FULL_VER"));
+            } catch (IOException ioe) {
+                throw VMError.shouldNotReachHere("Unable to create file to detect cl version info", ioe);
+            }
+            return List.of("/EP", detectVersionInfoFile.toString());
         }
 
         @Override
-        protected CompilerInfo createCompilerInfo(Path compilerPath, Scanner outerScanner) {
-            try (Scanner scanner = new Scanner(outerScanner.nextLine())) {
-                String targetArch = null;
-                /* For cl.exe the first line holds all necessary information */
-                if (scanner.hasNext("\u7528\u4E8E")) {
-                    /* Simplified-Chinese has targetArch first */
-                    scanner.next();
-                    targetArch = scanner.next();
+        protected CompilerInfo createCompilerInfo(Path compilerPath, Scanner scanner) {
+            try {
+                if (scanner.findInLine("Microsoft.*\\(R\\)") == null) {
+                    return null; // not a Microsoft compiler
                 }
-                /*
-                 * Some cl.exe print "... Microsoft (R) C/C++ ... ##.##.#####" while others print
-                 * "...C/C++ ... Microsoft (R) ... ##.##.#####".
-                 */
-                if (scanner.findInLine("Microsoft.*\\(R\\) C/C\\+\\+") == null &&
-                                scanner.findInLine("C/C\\+\\+.*Microsoft.*\\(R\\)") == null) {
+                scanner.nextLine(); // skip rest of first line
+                scanner.nextLine(); // skip copyright line
+                scanner.nextLine(); // skip blank separator line
+                skipLineIfHasNext(scanner, "detect-cl-version-info.c");
+                scanner.nextLine(); // skip blank separator line
+                skipLineIfHasNext(scanner, "M_X64=100"); // _M_X64 is defined
+                skipLineIfHasNext(scanner, "M_ARM64EC=_M_ARM64EC"); // _M_ARM64EC is not defined
+                if (scanner.findInLine("MSC_FULL_VER=") == null) {
                     return null;
                 }
-                scanner.useDelimiter("\\D");
-                while (!scanner.hasNextInt()) {
-                    scanner.next();
+                String mscFullVerValue = scanner.nextLine();
+                if (mscFullVerValue.length() < 5) {
+                    return null;
                 }
-                int major = scanner.nextInt();
-                int minor0 = scanner.nextInt();
-                int minor1 = scanner.nextInt();
-                if (targetArch == null) {
-                    scanner.reset();
-                    while (scanner.hasNext()) {
-                        /* targetArch is last token in line */
-                        targetArch = scanner.next();
-                    }
-                }
-                return new CompilerInfo(compilerPath, "microsoft", "C/C++ Optimizing Compiler", "cl", major, minor0, minor1, targetArch);
-            } catch (NoSuchElementException e) {
+                int major = Integer.parseInt(mscFullVerValue.substring(0, 2));
+                int minor0 = Integer.parseInt(mscFullVerValue.substring(2, 4));
+                int minor1 = Integer.parseInt(mscFullVerValue.substring(4));
+                return new CompilerInfo(compilerPath, "microsoft", "C/C++ Optimizing Compiler", "cl", major, minor0, minor1, "x64");
+            } catch (NoSuchElementException | NumberFormatException e) {
                 return null;
+            }
+        }
+
+        private static void skipLineIfHasNext(Scanner scanner, String expectedToken) {
+            if (scanner.hasNext(expectedToken)) {
+                scanner.nextLine();
+            } else {
+                throw new NoSuchElementException(expectedToken);
             }
         }
 
@@ -188,12 +195,7 @@ public abstract class CCompilerInvoker {
             int minimumMinorVersion = 31;
             if (compilerInfo.versionMajor < minimumMajorVersion || compilerInfo.versionMinor0 < minimumMinorVersion) {
                 UserError.abort("On Windows, GraalVM Native Image for JDK %s requires %s or later (C/C++ Optimizing Compiler Version %s.%s or later).%nCompiler info detected: %s",
-                                JavaVersionUtil.JAVA_SPEC, VISUAL_STUDIO_MINIMUM_REQUIRED_VERSION, minimumMajorVersion, minimumMinorVersion, compilerInfo.getShortDescription());
-            }
-            if (guessArchitecture(compilerInfo.targetArch) != AMD64.class) {
-                String targetPrefix = compilerInfo.targetArch.matches("(.*x|i\\d)86$") ? "32-bit architecture " : "";
-                UserError.abort("Native-image building on Windows currently only supports target architecture: %s (%s%s unsupported)",
-                                AMD64.class.getSimpleName(), targetPrefix, compilerInfo.targetArch);
+                                JavaVersionUtil.JAVA_SPEC, VISUAL_STUDIO_MINIMUM_REQUIRED_VERSION_TEXT, minimumMajorVersion, minimumMinorVersion, compilerInfo.getShortDescription());
             }
         }
 
@@ -236,11 +238,19 @@ public abstract class CCompilerInvoker {
                     return new CompilerInfo(compilerPath, "intel", "Intel(R) C++ Compiler", "icc", major, minor0, minor1, "x86_64");
                 }
 
+                if (scanner.findInLine(Pattern.quote("Intel(R) oneAPI DPC++/C++ Compiler ")) != null) {
+                    scanner.useDelimiter("[. ]");
+                    int major = scanner.nextInt();
+                    int minor0 = scanner.nextInt();
+                    int minor1 = scanner.nextInt();
+                    return new CompilerInfo(compilerPath, "intel", "Intel(R) oneAPI DPC++/C++ Compiler", "icx", major, minor0, minor1, "x86_64");
+                }
+
                 if (scanner.findInLine("clang version ") != null) {
                     scanner.useDelimiter("[. -]");
                     int major = scanner.nextInt();
                     int minor0 = scanner.nextInt();
-                    int minor1 = scanner.nextInt();
+                    String minor1 = scanner.next("[0-9]+(git)?");
                     String[] triplet = guessTargetTriplet(scanner);
                     return new CompilerInfo(compilerPath, "llvm", "Clang C++ Compiler", "clang", major, minor0, minor1, triplet[0]);
                 }
@@ -338,10 +348,14 @@ public abstract class CCompilerInvoker {
         public final String vendor;
         public final int versionMajor;
         public final int versionMinor0;
-        public final int versionMinor1;
+        public final String versionMinor1;
         public final String targetArch;
 
         public CompilerInfo(Path compilerPath, String vendor, String name, String shortName, int versionMajor, int versionMinor0, int versionMinor1, String targetArch) {
+            this(compilerPath, vendor, name, shortName, versionMajor, versionMinor0, Integer.toString(versionMinor1), targetArch);
+        }
+
+        public CompilerInfo(Path compilerPath, String vendor, String name, String shortName, int versionMajor, int versionMinor0, String versionMinor1, String targetArch) {
             this.compilerPath = compilerPath;
             this.name = name;
             this.vendor = vendor;
@@ -353,18 +367,18 @@ public abstract class CCompilerInvoker {
         }
 
         public String getShortDescription() {
-            return String.format("%s (%s, %s, %d.%d.%d)", compilerPath.toFile().getName(), vendor, targetArch, versionMajor, versionMinor0, versionMinor1);
+            return String.format("%s (%s, %s, %s.%s.%s)", compilerPath.toFile().getName(), vendor, targetArch, versionMajor, versionMinor0, versionMinor1);
         }
 
         public String toCGlobalDataString() {
             return String.join("|", Arrays.asList(shortName, vendor, targetArch,
-                            String.format("%d.%d.%d", versionMajor, versionMinor0, versionMinor1)));
+                            String.format("%s.%s.%s", versionMajor, versionMinor0, versionMinor1)));
         }
 
         public void dump(Consumer<String> sink) {
             sink.accept("Name: " + name + " (" + shortName + ")");
             sink.accept("Vendor: " + vendor);
-            sink.accept(String.format("Version: %d.%d.%d", versionMajor, versionMinor0, versionMinor1));
+            sink.accept(String.format("Version: %s.%s.%s", versionMajor, versionMinor0, versionMinor1));
             sink.accept("Target architecture: " + targetArch);
             sink.accept("Path: " + compilerPath);
         }
@@ -416,7 +430,7 @@ public abstract class CCompilerInvoker {
     }
 
     protected List<String> getVersionInfoOptions() {
-        return Arrays.asList("-v");
+        return List.of("-v");
     }
 
     protected abstract CompilerInfo createCompilerInfo(Path compilerPath, Scanner scanner);
